--- a/translations/tengyur/placeholders/136-004_toh4058-trisvabhavanirdesa.xml
+++ b/translations/tengyur/placeholders/136-004_toh4058-trisvabhavanirdesa.xml
@@ -10,11 +10,12 @@
                 <title xml:lang="en" type="mainTitle">A Teaching on the Three Natures</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date/>
+                <edition>v 0.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT23703-136-004"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh4058" type="text">
@@ -32,9 +33,11 @@
                 <link type="hasCommonSourceText" target="toh3843"/>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-03T10:19:26.956Z" user="admin">03/09/2022 10:19:26</note>
+                <note type="lastUpdated" date-time="2023-03-21T10:55:45.789Z" user="admin">21/03/2023 10:55:45</note>
                 <note type="updated" update="import" value="fileDesc" import="tengyur-data-4020-4085_PH_new_v2.4.xml" date-time="2022-01-28T10:32:05.149Z" user="admin"/>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-09-03T10:19:05.33Z" user="andre">Auto (entity-merge-attribution)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-03-21T10:55:41.619Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-21T10:55:41.619Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
