--- a/translations/kangyur/translations/054-003_toh122_wisdom_at_hour_of_death.xml
+++ b/translations/kangyur/translations/054-003_toh122_wisdom_at_hour_of_death.xml
@@ -22,7 +22,7 @@
                 <editor role="TEImarkupEditor" ref="contributors.xml#person-253">Michael Engle</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.24.14 <date>2022</date>
+                <edition>v 1.24.15 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -54,7 +54,7 @@
 
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T17:03:58.224Z" user="celso">18/01/2023 17:03:58</note>
+                <note type="lastUpdated" date-time="2023-03-21T14:14:30.855Z" user="admin">21/03/2023 14:14:30</note>
                 <note type="updated" update="text-version" value="v 1.24" date-time="2019-06-18T16:07:37.289Z" user="celso">v 1.24 2019</note>
                 <note type="updated" update="text-version" value="v 1.24.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement
                     updated</note>
@@ -79,6 +79,7 @@
     <note type="updated" update="text-version" value="1.24.12" date-time="2022-10-26T20:20:18.603Z" user="celso">Fixed broken link</note>
     <note type="updated" update="text-version" value="1.24.13" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
     <note type="updated" update="text-version" value="1.24.14" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+    <note type="updated" update="text-version" value="1.24.15" date-time="2023-03-21T14:14:28.045Z" user="celso">Update to glossary entry</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -408,8 +409,8 @@
                             <term xml:lang="bo">རྒྱལ་པོ་མདོ་ལྔ།</term>
                             <term xml:lang="Sa-Ltn"/>
                             <term type="definition">(1) <title xml:lang="Sa-Ltn">Bhadra­caryā­praṇidhāna</title> (<title xml:lang="Bo-Ltn">bzang spyod
-                                    smon lam</title>, (<ref rend="pending" target="https://read.84000.co/translation/toh44-45a.html">Toh 44-45a</ref>)
-                                in chapter 45 of the <title xml:lang="Sa-Ltn">Avataṃsaka</title>); for aspiration (<foreign xml:lang="Bo-Ltn">smon
+                                    smon lam</title>, <ref rend="pending" target="https://read.84000.co/translation/toh1095.html">Toh 1095</ref>);
+                                for aspiration (<foreign xml:lang="Bo-Ltn">smon
                                     lam</foreign>), and described as vast (<foreign xml:lang="Bo-Ltn">rgya chen</foreign>). (2) <title xml:lang="Sa-Ltn">Vajra­vidāraṇā­dhāraṇī</title> (<title xml:lang="Bo-Ltn">rdo rje rnam ’joms</title>, <ref target="https://read.84000.co/translation/toh750.html">Toh 750</ref>); for ablution (<foreign xml:lang="Bo-Ltn">khrus</foreign>). (3) <title xml:lang="Sa-Ltn">Prajñā­pāramitā­hṛdaya</title> (<title xml:lang="Bo-Ltn">shes rab snying po</title>, <ref target="https://read.84000.co/translation/toh21.html">Toh 21</ref> and <ref target="https://read.84000.co/translation/toh531.html">531</ref>); for the view (<foreign xml:lang="Bo-Ltn">lta
                                     ba</foreign>), and described as profound (<foreign xml:lang="Bo-Ltn">zab mo</foreign>). (4) <title xml:lang="Sa-Ltn">Atyaya­jñāna</title> (’<title xml:lang="Bo-Ltn">da’ ka ye shes</title>, Toh 122); for
                                 cultivation (<foreign xml:lang="Bo-Ltn">sgom pa</foreign>) and described as of definitive meaning (<title xml:lang="Bo-Ltn">nges don</title>). (5) <title xml:lang="Bo-Ltn">bya ba ltung bshags</title> (part of <title xml:lang="Sa-Ltn">Vinaya­viniścayopāli­paripṛcchā</title>, <ref target="https://read.84000.co/translation/toh68.html#UT22084-043-005-94">Toh 68</ref>); for purification of karmic obscurations (<foreign xml:lang="Bo-Ltn">las sgrib dag
