--- a/translations/kangyur/translations/091-073_toh675-the_aparimitayurjnana_sutra_2.xml
+++ b/translations/kangyur/translations/091-073_toh675-the_aparimitayurjnana_sutra_2.xml
@@ -31,7 +31,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.7 <date>2022</date>
+                <edition>v 1.1.8 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -63,7 +63,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T16:58:11.497Z" user="celso">18/01/2023 16:58:11</note>
+                <note type="lastUpdated" date-time="2023-03-21T14:27:25.391Z" user="admin">21/03/2023 14:27:25</note>
                 
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:25:23.489Z" user="mike">2.d</note>
@@ -86,6 +86,7 @@
     <note type="updated" update="text-version" value="1.1.5" date-time="2022-06-27T14:01:09.353Z" user="john">Typo corrected</note>
     <note type="updated" update="text-version" value="1.1.6" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
     <note type="updated" update="text-version" value="1.1.7" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+    <note type="updated" update="text-version" value="1.1.8" date-time="2023-03-21T14:27:22.541Z" user="celso">Update to glossary entry "ten royal sūtras"</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -2126,8 +2127,7 @@
                                 distillations of the most profound scriptures, or because according to traditional
                                 histories they were recommended to King Trisong Detsen for his daily practice by Guru
                                 Padmasambhava. These are: (1) <title xml:lang="Sa-Ltn">Bhadra­caryā­praṇidhāna</title>
-                                    (<title xml:lang="Bo-Ltn">bzang spyod smon lam</title>, (<ref rend="pending" target="https://read.84000.co/translation/toh44-45a.html">Toh 44-45a</ref>) in
-                                chapter 45 of the <title xml:lang="Sa-Ltn">Avataṃsaka</title>); for aspiration (<foreign xml:lang="Bo-Ltn">smon lam</foreign>), and described as vast (<foreign xml:lang="Bo-Ltn">rgya chen</foreign>). (2) <title xml:lang="Sa-Ltn">Vajra­vidāraṇā­dhāraṇī</title> (<title xml:lang="Bo-Ltn">rdo rje rnam
+                                    (<title xml:lang="Bo-Ltn">bzang spyod smon lam</title>, <ref rend="pending" target="https://read.84000.co/translation/toh1095.html">Toh 1095</ref>); for aspiration (<foreign xml:lang="Bo-Ltn">smon lam</foreign>), and described as vast (<foreign xml:lang="Bo-Ltn">rgya chen</foreign>). (2) <title xml:lang="Sa-Ltn">Vajra­vidāraṇā­dhāraṇī</title> (<title xml:lang="Bo-Ltn">rdo rje rnam
                                 ’joms</title>, <ref target="https://read.84000.co/translation/toh750.html">Toh 750</ref>); for ablution
                                     (<foreign xml:lang="Bo-Ltn">khrus</foreign>). (3) <title xml:lang="Sa-Ltn">Prajñā­pāramitā­hṛdaya</title> (<title xml:lang="Bo-Ltn">shes rab snying
                                 po</title>, <ref target="https://read.84000.co/translation/toh21.html">Toh 21</ref> and <ref target="https://read.84000.co/translation/toh531.html">531</ref>); for the view
