--- a/translations/kangyur/translations/061-005_toh185-the_sutra_teaching_the_deployment_of_the_inconceivable_qualities_and_gnosis_of_the_tathagatas_on_their_objects.xml
+++ b/translations/kangyur/translations/061-005_toh185-the_sutra_teaching_the_deployment_of_the_inconceivable_qualities_and_gnosis_of_the_tathagatas_on_their_objects.xml
@@ -24,7 +24,7 @@
                 <sponsor ref="sponsors.xml#sponsor-47">Make and Wang Xiao Juan (馬珂和王曉娟)</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.14 <date>2021</date>
+                <edition>v 1.0.15 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -61,7 +61,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-06T16:42:42.751Z" user="celso">06/02/2023 16:42:42</note>
+                <note type="lastUpdated" date-time="2023-03-21T14:44:15.836Z" user="admin">21/03/2023 14:44:15</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2019-05-06T16:17:25.267Z" user="john">2.d</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2019-05-30T01:13:35.014Z" user="dion-blundell">2.c</note>
                 <note type="updated" update="text-version" value="0.1" date-time="2019-10-07T08:19:33.747Z" user="andreas"/>
@@ -96,6 +96,7 @@
                 <note type="updated" update="text-version" value="1.0.12" date-time="2022-07-26T06:28:20.129Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="1.0.13" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.0.14" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+                <note type="updated" update="text-version" value="1.0.15" date-time="2023-03-21T14:44:12.984Z" user="celso">minor update to bibl entry for Toh 1095</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1718,14 +1719,15 @@
                             <title xml:lang="Bo-Ltn">byang chub sems dpa’i sde snod</title> (<title xml:lang="Sa-Ltn">
                                 <ref rend="pending" target="https://read.84000.co/translation/toh56.html">Bodhi­sattva­piṭaka</ref>
                             </title>). Toh 56, Degé Kangyur vol. 40 (dkon brtsegs, kha), folios 255.b–294.a and vol. 41 (dkon brtsegs, ga), folios 1.b–205.b.</bibl>              
+                                   <bibl xml:id="UT22084-061-005-705">
+                            <title xml:lang="Bo-Ltn">bzang spyod smon lam</title> (<title xml:lang="Sa-Ltn">
+                                <ref rend="pending" target="https://read.84000.co/translation/toh1095.html">Bhadra­caryā­praṇidhāna</ref>
+                            </title>). Toh 1095, Degé Kangyur vol. 101 (gzungs ’dus, waM), folios 262.b–266.a.</bibl>
                                    <bibl xml:id="UT22084-061-005-701">
                             <title xml:lang="Bo-Ltn">dgongs pa nges par ’grel pa’i mdo</title> (<title xml:lang="Sa-Ltn">Saṃdhi­nirmocana­sūtra</title>). Toh 106, Degé Kangyur vol. 49 (mdo sde, ca), folios 1.b–55.b. English translation in <ref target="https://read.84000.co/translation/toh106.html">Buddhavacana Translation Group (2020)</ref>. [Full citation listed in secondary literature]</bibl>
                                    <bibl xml:id="UT22084-061-005-703">
                             <title xml:lang="Bo-Ltn">dkon mchog sprin</title> (<title xml:lang="Sa-Ltn">Ratnamegha</title>). Toh 231, Degé Kangyur vol. 64 (mdo sde, wa), folios 1.b–112.b. English translation in <ref target="https://read.84000.co/translation/toh231.html">Dharmachakra Translation Committee (2019)</ref>. [Full citation listed in secondary literature]</bibl>
-                                   <bibl xml:id="UT22084-061-005-705">
-                            <title xml:lang="Bo-Ltn">kun tu bzang po’i spyod pa’i smon lam</title> (<title xml:lang="Sa-Ltn">
-                                <ref rend="pending" target="https://read.84000.co/translation/toh44-45a.html">Samanta­bhadra­caryā­praṇidhāna</ref>
-                            </title>). Toh 44-45a, Degé Kangyur vol. 38 (phal chen, a), folios 358.b–363.a.</bibl>
+                                   <!--<bibl xml:id="UT22084-061-005-705"><title xml:lang="Bo-Ltn">kun tu bzang po’i spyod pa’i smon lam</title> (<title xml:lang="Sa-Ltn"><ref rend="pending" target="https://read.84000.co/translation/toh44-45a.html">Samanta­bhadra­caryā­praṇidhāna</ref></title>). Toh 44-45a, Degé Kangyur vol. 38 (phal chen, a), folios 358.b–363.a.</bibl>-->
                                    <bibl xml:id="UT22084-061-005-709">Nāgārjuna. <title xml:lang="Bo-Ltn">dbu ma rtsa ba’i tshig le’ur byas pa</title> (<title xml:lang="Sa-Ltn">
                                 <ref rend="pending" target="https://read.84000.co/translation/toh3824.html">Mūla­madhyamaka­kārikā</ref>
                             </title>). Toh 3824, Degé Tengyur vol. 96 (dbu ma, tsa), folios 1.b–19.a.</bibl>
