--- a/translations/kangyur/translations/043-005_toh68-ascertaining_the_discipline_the_sutra_of_upalis_questions.xml
+++ b/translations/kangyur/translations/043-005_toh68-ascertaining_the_discipline_the_sutra_of_upalis_questions.xml
@@ -31,7 +31,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-250">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.6 <date>2022</date>
+                <edition>v 1.2.7 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -64,7 +64,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T17:04:31.264Z" user="celso">18/01/2023 17:04:31</note>
+                <note type="lastUpdated" date-time="2023-03-21T18:01:35.128Z" user="admin">21/03/2023 18:01:35</note>
 
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-11-06T13:11:59.611Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2019-11-06T13:11:59.611Z" user="andreas">2.g</note>
@@ -116,6 +116,7 @@
     <note type="updated" update="text-version" value="1.2.4" date-time="2022-07-10T18:25:08.22Z" user="john">Harmonization of trailer and colophon</note>
     <note type="updated" update="text-version" value="1.2.5" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
     <note type="updated" update="text-version" value="1.2.6" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+    <note type="updated" update="text-version" value="1.2.7" date-time="2023-03-21T18:01:32.218Z" user="john">Typo fixed, line break spaces added in intro.</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -151,6 +152,7 @@
                         bodhisattva. In the second section, the titular Upāli poses a series of questions that prompt a more in-depth discourse from
                         the Buddha on the relationship between monastic codes of conduct and the commitments of a bodhisattva, with a focus on the
                         views that guide the followers of the śrāvaka, pratyekabuddha, and bodhisattva vehicles.</p>
+                    <lb/>
                     <milestone unit="chunk" xml:id="UT22084-043-005-4"/>
                     <p tid="8">The sūtra opens in the north Indian city of Śrāvastī, where the Buddha resides among a vast assembly of monks and
                         bodhisattvas in Anāthapiṇḍada’s Park at Prince Jeta’s Grove. Addressing the bodhisattvas in the assembly, the Buddha asks who
@@ -188,6 +190,7 @@
                         discipline? The Buddha responds by saying that if beings already knew this, then the Tathāgata would not have to continually
                         explain the rules of monastic discipline; the rules, therefore, are provisional, and meant to help beings gradually understand
                         that all phenomena are innately disciplined.</p>
+                    <lb/>
                     <milestone unit="chunk" xml:id="UT22084-043-005-7"/>
                     <p tid="11">As part of its focus on the conduct of a bodhisattva, <title xml:lang="en">Ascertaining the Vinaya</title> includes a
                         version of the “Three Sections” rite, a confessional practice for mending breaches of a bodhisattva’s discipline. This sūtra,
@@ -198,7 +201,7 @@
                         principal canonical sources for the rite, but the rite presented here 
                         (<ptr target="#UT22084-043-005-94"/>–<ptr target="#UT22084-043-005-111"/>) is distinctive for the set of thirty-five buddhas before
                         which bodhisattvas are directed to make their confession. That the “Three Sections” became an important practice in Indian
-                        Buddhism is attested by the fact that is referenced in Śāntideva’s <title xml:lang="Sa-Ltn">Śikṣāsamuccaya</title>
+                        Buddhism is attested by the fact that it is referenced in Śāntideva’s <title xml:lang="Sa-Ltn">Śikṣāsamuccaya</title>
                         <ref rend="pending" target="https://read.84000.co/translation/toh3940.html"/>
                         <note place="end" xml:id="UT22084-043-005-9"> See
                             Barnes 2012.</note> and was commented on by Nāgārjuna in his <title xml:lang="Sa-Ltn">Bodhyāpatti­deśanāvṛtti</title>
@@ -243,6 +246,7 @@
                             Taishō 325: 決定毘尼經 (<title xml:lang="Zh-Ltn">Jueding pini jing</title>), translated by an unknown translator in Dunhuang in the Western Jin (third to fifth century). 
                             Taishō 326: 三十五佛名禮懺文 (<title xml:lang="Zh-Ltn">Sanshi wu fo ming li chan wen</title>), translated by Amoghavajra in the Tang (eighth century).</note>
                     </p>
+                    <lb/>
                     <milestone unit="chunk" xml:id="UT22084-043-005-479"/>
                     <p tid="198">
                         <title xml:lang="en">Ascertaining the Vinaya</title> was translated into Tibetan during Tibet’s imperial period by the
@@ -270,6 +274,7 @@
                         based on the available Sanskrit,
                         Tibetan, and Chinese versions. Garma C. C. Chang translated the Chinese version into English in <title xml:lang="en">A
                             Treasury of Mahāyāna Sūtras: Selections from the Mahāratnakūṭa Sūtra</title> (1983). </p>
+                    <lb/>
                     <milestone unit="chunk" xml:id="UT22084-043-005-17"/>
                     <p tid="13">This English translation was prepared based on the Tibetan translation in the Degé Kangyur in consultation with the
                         Pedurma comparative edition (Tib. <foreign xml:lang="Bo-Ltn" type="term">dpe bsdur ma</foreign>) and the version of the
