--- a/translations/kangyur/translations/044-003_toh83_questions_of_bhadrapala.xml
+++ b/translations/kangyur/translations/044-003_toh83_questions_of_bhadrapala.xml
@@ -22,10 +22,11 @@
                 <editor role="externalReviewer" ref="contributors.xml#person-165">Robert Miller</editor>
                 <editor role="copyEditor" ref="contributors.xml#person-31">Casey Kemp</editor>
                 <editor role="finalReviewer" ref="contributors.xml#person-139">John Canti</editor>
-                <consultant role="projectManager" ref="contributors.xml#person-115">Dr. Karen Liljenberg</consultant> 
+                <consultant role="projectManager" ref="contributors.xml#person-115">Dr. Karen Liljenberg</consultant>
+                <sponsor ref="eft:sponsor-223">Late Ngiam Hye Chin and family</sponsor> 
             </titleStmt>
             <editionStmt>
-                <edition>v 1.38.13 <date>2022</date>
+                <edition>v 1.38.15 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -61,7 +62,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T14:24:09.686Z" user="celso">18/01/2023 14:24:09</note>
+                <note type="lastUpdated" date-time="2023-03-22T05:39:14.319Z" user="admin">22/03/2023 05:39:14</note>
                 <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="v 1.37" date-time="2019-06-18T15:53:53.155Z" user="celso">v 1.37 2019</tei:note>
                 <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="v 1.37.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</tei:note>
                 <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="v 1.37.2" date-time="2020-04-30T21:32:41.64Z" user="celso">corrected typo in glossary entry: rgyal po'i khab</tei:note>
@@ -76,8 +77,10 @@
                 <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="1.38.9" date-time="2022-02-15T16:57:00.571Z" user="celso">Corrected a &lt;title&gt; tag</tei:note>
                 <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="1.38.10" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</tei:note>
                 <note type="updated" update="text-version" value="1.38.11" date-time="2022-06-27T20:28:57.223Z" user="martina-cotter">minor update</note>
-                <note type="updated" update="text-version" value="1.38.12" date-time="2022-07-10T18:30:54.694Z" user="john">Harmonization of trailer and colophon</note> 
+                <note type="updated" update="text-version" value="1.38.12" date-time="2022-07-10T18:30:54.694Z" user="john">Harmonization of trailer and colophon</note>
                 <note type="updated" update="text-version" value="1.38.13" date-time="2022-10-08T11:52:44.612Z" user="john">Auto (update-titles)</note> 
+                <note type="updated" update="text-version" value="1.38.14" date-time="2023-03-18T02:11:38.636Z" user="cabie-sim">Auto (update-sponsorship)</note> 
+                <note type="updated" update="text-version" value="1.38.15" date-time="2023-03-22T05:39:11.507Z" user="martina-cotter">added sponsorship acknowledgement</note> 
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -108,6 +111,9 @@
                 <p tid="2">Translated by Dr Karen Liljenberg and Dr Ulrich Pagel.</p>
                 <p tid="3">This translation has been completed under the patronage and supervision of 84000: Translating the Words
                     of the Buddha.</p>
+                <lb/>
+                <milestone unit="chunk" xml:id="UT22084-044-003-283"/>
+                <p tid="218">We gratefully acknowledge the generous sponsorship of Late Ngiam Hye Chin and family. Their support has helped make the work on this translation possible.</p>
             </div>
             <div type="introduction">
                 <head type="introduction" tid="210">Introduction</head>
