--- a/translations/kangyur/placeholders/080-003_toh419-the_tantra_of_the_vajra_cage.xml
+++ b/translations/kangyur/placeholders/080-003_toh419-the_tantra_of_the_vajra_cage.xml
@@ -16,10 +16,10 @@
                 <sponsor ref="sponsors.xml#sponsor-187">Chen Sin I and family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2020</date>
+                <edition>v 0.0.7 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-080-003"/>
                 <date/>
             </publicationStmt>
@@ -35,7 +35,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T07:22:36.15Z" user="admin">26/07/2022 07:22:36</note>
+                <note type="lastUpdated" date-time="2023-03-22T13:18:37.066Z" user="admin">22/03/2023 13:18:37</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-21T09:57:54.998Z" user="andreas">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-02-21T09:57:54.998Z" user="andreas">3</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-14T15:25:34.687Z" user="amy">Auto (update-titles)</note>
@@ -43,6 +43,8 @@
                 <note type="updated" update="text-version" value="0.0.4" date-time="2021-10-22T11:13:48.081Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2021-11-19T10:56:51.269Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-07-26T07:22:28.512Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-03-22T13:18:32.889Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-22T13:18:32.889Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
